=== SVN

* Added :charset option to MySQL adapter (#40).

* Fixed Dataset#exclude to add parens around NOT expression (#38).

* Fixed use of sub-queries with all comparison operators in block filters (#38).

* Fixed arithmetic expressions in block filters to not be literalized.

* Changed Symbol#method_missing to return LiteralString.

* Changed PrettyTable to right-align numbers.

* Fixed Model.create_table (thanks Duane Johnson.)

=== 0.2.0.1 (2007-09-04)

* Improved support for invoking methods with inline procs inside block filters.

=== 0.2.0 (2007-09-02)

* Fixed Model.drop_table (thanks Duane Johnson.)

* Dataset#each can now return rows for arbitrary SQL by specifying :sql option.

* Added spec for postgres adapter.

* Fixed Model.method_missing to work with new SQL generation.

* Fixed #compare_expr to support regexps.

* Fixed postgres, mysql adapters to support regexps.

* More specs for block filters. Updated README.

* Added support for globals and $X macros in block filters.

* Fixed Sequelizer to not fail if ParseTree or Ruby2Ruby gems are missing.

* Renamed String#expr into String#lit (#expr should be deprecated in future versions).

* Renamed Sequel::ExpressionString into LiteralString.

* Fixed Symbol#[] to return an ExpressionString, so as not to be literalized.

* Renamed Dataset::Expressions to Dataset::Sequelizer.

* Renamed Expressions#format_re_expression to match_expr.

* Renamed Expressions#format_eq_expression to compare_expr.

* Added support for Regexp in MySQL adapter.

* Refactored Regexp expressions into a separate #format_re_expression method.

* Added support for arithmetic in proc filters.

* Added support for nested proc expressions, more specs.

* Added support for SQL function using symbols, e.g. :sum[:x].

* Fixed deadlock bug in ConnectionPool.

* Removed deprecated old expressions.rb.

* Rewrote Proc filter feature using ParseTree.

* Added support for additional functions on columns using Symbol#method_missing.
